# itmo-4th-year

computing-systems-design/lab2/diagrams/: activity.drawio  activity_deploy.drawio  activity_disasm.drawio  activity_profile.drawio  copy_file_l_r.txt  copy_file_r_l.txt  create_profile.bpmn  diagram.bpmn  execute.txt  macro.bpmn
infosec/lab1/: Cargo.toml  example.txt
infosec/lab1/src/: alphabet.rs  caesar.rs  freq_analysis.rs  main.rs
infosec/lab2/: Cargo.toml
infosec/lab2/report/: lab2.tex
infosec/lab2/src/: encrypt.rs  main.rs
infosec/part1/lab1/: Cargo.toml
infosec/part1/lab1/report/: lab1.tex
infosec/part1/lab1/src/: caesar.rs  freq_analysis.rs
infosec/part1/lab2/: Cargo.toml
infosec/part1/lab2/src/: encrypt.rs
infosec/part2/lab1/: Cargo.toml
infosec/part2/lab1/report/: lab1.tex
infosec/part2/lab1/src/: main.rs  mod_ops.rs  rsa.rs  var10.yaml
infosec/part2/lab2/: Cargo.toml
infosec/part2/lab2/report/: lab2.tex
infosec/part2/lab2/src/: input.yaml  main.rs
infosec/part2/lab5/: Cargo.toml
infosec/part2/lab5/report/: lab5.tex
infosec/part2/lab5/src/: alphabet.rs  alphabet.txt  alphabet_generator.py  (+5 more)
infosec/part2/lab6/: Cargo.toml
infosec/part2/lab6/report/: lab6.tex
infosec/part2/lab6/src/: alphabet.rs  elliptic_curve.rs  main.rs  point.rs  var10.yaml
metrology/lab-001/: lab-001.tex
testing/Lab1/: .gitignore  build.sbt
testing/Lab2/: .gitignore  a.csv  build.sbt
testing/Lab2/utils/: plot.Rmd  res.csv  res1.csv
testing/Lab3/: .gitignore  build.gradle.kts
testing/Lab3/resources/: usecases.drawio
testing/Lab4/: lab.jmx
(+62 files in other folders)
