[package]
name = "lab1"
version = "0.1.0"
authors = ["johnny-keker <isarzhevsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
byteorder = "1.4.3"
encoding_rs = "0.8.28"
yaml-rust = "0.4.5"
getopts = "0.2"