[package]
name = "lab2"
version = "0.1.0"
authors = ["johnny-keker <isarzhevsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
getopts = "0.2"
encoding_rs = "0.8.28"
num = "0.2.0"
byteorder = "1.4.3"
num-traits = "0.2.14"
crossbeam = "0.8.0"