[package]
name = "lab6"
version = "0.1.0"
authors = ["johnny-keker <isarzhevsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
phf = { version = "0.7.24", features = ["macros"] }
yaml-rust = "0.4.5"
getopts = "0.2"
regex = "1.4.5"